tests/valid/teste_exp.ts
let x: number = 5 + 10;

console.log(x);
console.log(10/3);