tests/invalid/teste_while_erro.ts
let contador: number = 0;

while (contador < 5) {
    console.log(contador);
    contador = contador + 1;
}
